--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/styles.css": "/css/styles.css",
+    "/css/app.css": "/css/app.css",
+    "/css/design.css": "/css/design.css"
 }
