--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^7.0",
         "laravel/telescope": "^3.3",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "nao-pon/flysystem-google-drive": "~1.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
